--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "local-web-server": "^2.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "ws": "^6.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
